--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -8,7 +8,7 @@ plugins {
 android {
     namespace = "com.example.sigbang"
     compileSdk = flutter.compileSdkVersion
-    ndkVersion = flutter.ndkVersion
+    // ndkVersion = flutter.ndkVersion // Commented out to avoid NDK issues
 
     compileOptions {
         sourceCompatibility = JavaVersion.VERSION_1_8
