--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,6 +25,18 @@ jobs:
           git pull origin main
 
           cd ..
+          echo "=== Before Cleanup ==="
+          df -h
+          docker system df
+
+          docker system prune -af
+          docker volume prune -f
+          docker builder prune -f
+          
+          echo "=== After Cleanup ==="
+          df -h
+          docker system df
+
           docker-compose -f docker-compose.yml -f docker-compose.back.yml build backend
           docker-compose -f docker-compose.yml -f docker-compose.back.yml up -d backend
         EOF
