--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,9 +13,30 @@ dependencies:
   flutter:
     sdk: flutter
 
+  # UI
   cupertino_icons: ^1.0.8
+  
+  # State Management
+  flutter_bloc: ^8.1.3
+  
+  # Dependency Injection
+  get_it: ^7.6.4
+  
+  # Networking
+  dio: ^5.3.2
+  
+  # Routing
+  go_router: ^13.0.1
+  
+  # Authentication
   google_sign_in: ^6.2.1
-  supabase_flutter: ^1.10.9
+  
+  # Local Storage
+  shared_preferences: ^2.2.2
+  
+  # Utils
+  equatable: ^2.0.5
+  dartz: ^0.10.1
 
   flutter_localizations:
     sdk: flutter
