--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,9 @@ dependencies:
 
   http: ^0.13.6
   
+  # Media
+  image_picker: ^1.0.7
+  
   # Local Storage
   shared_preferences: ^2.2.2
   flutter_secure_storage: ^9.0.0
