feat: 이미지 추가 갤러리 구현
대표/단계 이미지 추가 → 시스템 갤러리(단일 선택) → 자동 1:1 센터 크롭+리사이즈+압축 → 미리보기 표시 → 초안 ID가 있으면 백그라운드 업로드로 URL 자동 치환
하단 바텀시트 없이 image_picker의 네이티브 갤러리 화면으로 즉시 진입하도록 변경했습니다.
네이티브 UX 유지: OS 기본 갤러리 UI를 그대로 사용해 네이티브한 선택 경험을 제공합니다. 카메라/다중선택은 비활성화

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,10 @@ dependencies:
   
   # Media
   image_picker: ^1.0.7
+  crop_your_image: ^1.1.0
+  flutter_image_compress: ^2.2.0
+  path_provider: ^2.1.3
+  image: ^4.1.7
   
   # Local Storage
   shared_preferences: ^2.2.2
