feat : wechat_assets_picker 시스템 언어 추가
표 이미지:
PhotoUploadWidget 탭 → wechat_assets_picker 갤러리 → 선택 즉시 1:1 센터 크롭 + 1080 타깃,
048 상한, WebP 우선 압축 → 반영.

단계 이미지: 동일 플로우로 즉시 전처리 후 반영.
편집 모달은 제거된 상태이며, 추후 필요 시 다시 토글로 켤 수 있도록 코드 구조 유지.
참고
갤러리 피커는 이미지 전용, MIME 필터 적용.
초안이 있는 경우 백그라운드 업로드로 URL로 자동 치환됩니다.
원하면 버튼별 옵션으로 “바로 추가”와 “편집 후 추가”를 분리해 제공할 수도 있어요.

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,7 +31,7 @@ dependencies:
   # Authentication
   google_sign_in: ^6.2.1
 
-  http: ^0.13.6
+  http: ^1.2.1
   
   # Media
   image_picker: ^1.0.7
@@ -39,6 +39,8 @@ dependencies:
   flutter_image_compress: ^2.2.0
   path_provider: ^2.1.3
   image: ^4.1.7
+  wechat_assets_picker: ^9.2.1
+  photo_manager: ^3.1.1
   
   # Local Storage
   shared_preferences: ^2.2.2
