--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,9 @@ dependencies:
   # Routing
   go_router: ^13.0.1
   
+  # SVG rendering
+  flutter_svg: ^2.0.10+1
+  
   # Authentication
   google_sign_in: ^6.2.1
 
@@ -59,6 +62,8 @@ dev_dependencies:
     sdk: flutter
 
   flutter_lints: ^5.0.0
+  # Native splash screen generator
+  flutter_native_splash: ^2.4.1
 
 flutter:
   uses-material-design: true
@@ -72,3 +77,12 @@ flutter:
     - assets/images/
     - .env.dev
     - .env.prod
+
+# Splash screen configuration
+flutter_native_splash:
+  color: "#FFFFFF"
+  image: assets/images/logo_splash.png
+  android_12:
+    image: assets/images/logo_splash.png
+    color: "#FFFFFF"
+  web: false
