--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
     "prisma:generate": "prisma generate",
-    "prisma:push": "prisma db push",
+    "prisma:punp": "prisma db push",
     "prisma:migrate": "prisma migrate dev",
     "prisma:reset": "prisma migrate reset"
   },
@@ -43,7 +43,8 @@
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
     "reflect-metadata": "^0.1.13",
-    "rxjs": "^7.8.1"
+    "rxjs": "^7.8.1",
+    "sharp": "^0.33.4"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
