feat: noto sans로 기본 폰트로 변경

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -57,6 +57,9 @@ dependencies:
 
   flutter_localizations:
     sdk: flutter
+  
+  # Fonts
+  google_fonts: ^6.2.1
 
 dev_dependencies:
   flutter_test:
