feat(auth): 세션/토큰 관리 전면 개선 및 자동 갱신 도입
- JWT exp 파싱 유틸 추가(`JwtUtils`), 만료/임박 판단 지원
- Dio 인터셉터: 요청 전 만료 사전 검사 및 401시 단일(싱글-플라이트) 갱신 후 재시도
- `ApiClient.ensureValidAccessToken()` 추가
- SecureStorage에 액세스 토큰 만료 시각(`access_exp`) 저장/삭제
- `AuthService.initialize()/isSignedIn()`에서 만료 임박 시 갱신 시도 후 세션 복원
- 백그라운드 자동 갱신 `SessionManager` 추가(주기적 점검, 사전 갱신)
- 전역 `SessionCubit` 및 `SessionBinding` 추가: 로그인 상태에 따라 SessionManager start/stop
- DI 콜백(`onTokenExpired`)에서 `HomeCubit.loadHome()` 및 게스트 전환 반영
- 환경설정 추가(`EnvConfig`):
  - `ACCESS_LEEWAY_SECONDS` (기본 15)
  - `BACKGROUND_CHECK_INTERVAL_SECONDS` (기본 30)
  - `PROACTIVE_REFRESH_WINDOW_SECONDS` (기본 60)
- 앱 시작 시 초기 세션 상태 설정 및 `SessionManager` 시작(`main.dart`)
- Mock 로그인 시 만료 시각 저장 로직 반영

BREAKING CHANGE:
- .env에 위 신규 키를 필요에 따라 설정하세요(미설정 시 기본값 사용)

＝＝＝＝＝＝＝＝＝＝＝＝

1. 앱 실행 시

Splash 또는 Init
1. SecureStorage에서 accessToken, refreshToken 로드
2. accessToken 존재 여부 확인
   - 없으면: guest 상태로 앱 실행
   - 있으면:
     2-1. accessToken 유효성 검사
         → 유효: 자동 로그인 (유저 세션 상태 저장)
         → 만료: refreshToken으로 accessToken 재발급 시도
              → 성공: accessToken 갱신, 로그인 유지
              → 실패: 토큰 모두 삭제, guest 상태로 실행
3. 이후 홈 화면

2. 사용자가 명시적으로 로그인 시도할 때
사용자가 명시적으로 로그인 시도할 때
1. 로그인 버튼 클릭
2. Google 로그인 (google_sign_in)
3. ID Token 획득 → 서버에 전송 (`/auth/google`)
4. 서버에서 accessToken + refreshToken 응답
5. 두 토큰 SecureStorage에 저장
6. 세션 상태 "로그인 완료"로 전환 (Riverpod)
7. UI에 반영 (예: 상단 프로필 노출, 저장 버튼 활성화)

3. API 요청 전 자동 토큰 확인 흐름 (Dio Interceptor)
1. accessToken 만료 여부 확인
   - 만료됐다면 refreshToken 사용해서 갱신 시도
   - 실패하면 토큰 삭제하고 guest 세션으로 전환
2. Authorization 헤더에 accessToken 삽입
3. 요청 수행

4. 로그아웃 시
1. 서버에 `/auth/logout` 요청 (refreshToken 포함)
2. 서버는 refreshToken 무효화
3. Flutter:
   - SecureStorage에서 토큰 제거
   - GoogleSignIn.signOut()
   - 세션 상태 "guest"로 전환

전체 흐름 요약 (로그인 선택적 구조 기준)
앱 실행
 └─> 토큰 있나?
        ├─ 없음 → guest 상태 → 앱 실행
        └─ 있음
              ├─ access 유효 → 로그인 세션 유지
              ├─ access 만료 → refresh 시도
              │        ├─ 성공 → 로그인 유지
              │        └─ 실패 → guest 상

--- a/.env.dev
+++ b/.env.dev
@@ -1,1 +1,4 @@
 BASE_URL=https://api.sigbang.com
+ACCESS_LEEWAY_SECONDS=15
+BACKGROUND_CHECK_INTERVAL_SECONDS=30
+PROACTIVE_REFRESH_WINDOW_SECONDS=60
