--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "class-validator": "^0.14.0",
     "google-auth-library": "^10.1.0",
     "multer": "^1.4.5-lts.1",
+    "openai": "^4.104.0",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
