--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,50 +1,88 @@
-name: Deploy to EC2
+name: Build & Deploy to EC2
 
 on:
   push:
-    branches:
-      - main
+    branches: [ main ]
+
+env:
+  REGISTRY: ghcr.io
+  IMAGE_NAME: ${{ github.repository }}-backend  # ghcr.io/OWNER/REPO-backend
+  # Docker BuildKit 출력 개선
+  DOCKER_BUILDKIT: 1
+  COMPOSE_DOCKER_CLI_BUILD: 1
 
 jobs:
-  deploy:
+  build-and-deploy:
     runs-on: ubuntu-latest
 
+    permissions:
+      contents: read
+      packages: write    # GHCR 푸시에 필요
+      id-token: write
+
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v3
+      - name: 🧾 Checkout
+        uses: actions/checkout@v4
 
-    - name: Setup SSH
-      uses: webfactory/ssh-agent@v0.7.0
-      with:
-        ssh-private-key: ${{ secrets.DEPLOY_KEY }}
+      - name: 🔑 Login to GHCR
+        uses: docker/login-action@v3
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
 
-    - name: Deploy to EC2
-      run: |
-        ssh -o StrictHostKeyChecking=no ${{ secrets.DEPLOY_USER }}@${{ secrets.DEPLOY_HOST }} << 'EOF'
-          echo "[1] 🛰 Pull latest code"
-          cd ~/sigbang-server/sigbang_api
-          git pull origin main
+      - name: 🏷️ Extract metadata (tags, labels)
+        id: meta
+        uses: docker/metadata-action@v5
+        with:
+          images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
+          tags: |
+            type=raw,value=latest
+            type=sha
 
-          cd ..
+      - name: 🛠️ Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
 
+      - name: 📦 Build & Push (with cache)
+        uses: docker/build-push-action@v6
+        with:
+          context: .
+          file: ./Dockerfile
+          target: production               # 위에 제안한 다단계 Dockerfile 기준
+          push: true
+          tags: ${{ steps.meta.outputs.tags }}
+          labels: ${{ steps.meta.outputs.labels }}
+          cache-from: type=registry,ref=${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:buildcache
+          cache-to: type=registry,ref=${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:buildcache,mode=max
+          provenance: false                # 일부 런타임/도구와의 호환성 이슈 회피
 
-          echo "[2] 💽 Disk usage BEFORE cleanup"
-          df -h
-          docker system df
+      - name: 🛰️ SSH into EC2 & Deploy
+        uses: webfactory/ssh-agent@v0.9.0
+        with:
+          ssh-private-key: ${{ secrets.DEPLOY_KEY }}
 
-          echo "[3] 🧹 Docker cleanup"
-          docker container prune -f
-          docker image prune -af
-          docker volume prune -f
-          docker builder prune -f
-          
-          echo "[4] 💽 Disk usage AFTER cleanup"
-          df -h
-          docker system df
+      - name: 🚀 Pull & Up on EC2
+        run: |
+          ssh -o StrictHostKeyChecking=no ${{ secrets.DEPLOY_USER }}@${{ secrets.DEPLOY_HOST }} << 'EOF'
+            set -e
+            echo "[1] cd to project"
+            cd ~/sigbang-server
 
-          echo "[5] 🧱 Docker build"
-          docker-compose -f docker-compose.yml -f docker-compose.back.yml build --no-cache backend
-          
-          echo "[6] 🚀 Docker up"
-          docker-compose -f docker-compose.yml -f docker-compose.back.yml up -d backend
-        EOF
+            echo "[2] Update compose files (optional git pull)"
+            git pull origin main || true
+
+            echo "[3] Export IMAGE_TAG for compose (use short SHA)"
+            export IMAGE_TAG=$(echo "${GITHUB_SHA}" | cut -c1-7)
+
+            echo "[4] Login GHCR"
+            echo ${{ secrets.GITHUB_TOKEN }} | docker login ghcr.io -u ${{ github.actor }} --password-stdin
+
+            echo "[5] Pull new image"
+            docker compose -f docker-compose.yml -f docker-compose.back.yml pull backend
+
+            echo "[6] Start/Restart"
+            docker compose -f docker-compose.yml -f docker-compose.back.yml up -d backend
+
+            echo "[7] Prune old images (keep last 5)"
+            docker image prune -f
+          EOF
