--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -4,20 +4,24 @@ on:
   push:
     branches: [ main ]
 
+concurrency:
+  group: deploy-${{ github.ref }}
+  cancel-in-progress: true
+
 env:
   REGISTRY: ghcr.io
-  IMAGE_NAME: ${{ github.repository }}-backend  # ghcr.io/OWNER/REPO-backend
-  # Docker BuildKit 출력 개선
+  IMAGE_NAME: ${{ github.repository }}-backend        # ghcr.io/<owner>/<repo>-backend
   DOCKER_BUILDKIT: 1
   COMPOSE_DOCKER_CLI_BUILD: 1
 
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
+    timeout-minutes: 30
 
     permissions:
       contents: read
-      packages: write    # GHCR 푸시에 필요
+      packages: write       # Push to GHCR
       id-token: write
 
     steps:
@@ -31,91 +35,101 @@ jobs:
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: 🏷️ Extract metadata (tags, labels)
+      - name: 🏷️ Extract Docker metadata (tags & labels)
         id: meta
         uses: docker/metadata-action@v5
         with:
           images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
           tags: |
             type=raw,value=latest
-            type=sha
+            type=sha,format=short,prefix=sha-
 
-      - name: 🛠️ Set up Docker Buildx
+      - name: 🛠️ Set up Buildx
         uses: docker/setup-buildx-action@v3
 
-      - name: 📦 Build & Push (with cache)
+      - name: 📦 Build & Push (production image)
         uses: docker/build-push-action@v6
         with:
           context: .
           file: ./Dockerfile
-          target: production               # 위에 제안한 다단계 Dockerfile 기준
+          target: production
           push: true
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
           cache-from: type=registry,ref=${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:buildcache
           cache-to: type=registry,ref=${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:buildcache,mode=max
-          provenance: false                # 일부 런타임/도구와의 호환성 이슈 회피
+          provenance: false
 
-      - name: 🛰️ SSH into EC2 & Deploy
+      - name: 🔐 Setup SSH agent
         uses: webfactory/ssh-agent@v0.9.0
         with:
           ssh-private-key: ${{ secrets.DEPLOY_KEY }}
-          
+
       - name: 🚀 Pull & Up on EC2
+        env:
+          EC2_USER: ${{ secrets.DEPLOY_USER }}
+          EC2_HOST: ${{ secrets.DEPLOY_HOST }}
+          GITHUB_ACTOR: ${{ github.actor }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
-             SHORT_SHA=$(echo "${{ github.sha }}" | cut -c1-7)
-             ssh -o StrictHostKeyChecking=no ${{ secrets.DEPLOY_USER }}@${{ secrets.DEPLOY_HOST }} \
-             "GITHUB_TOKEN='${{ secrets.GITHUB_TOKEN }}' GITHUB_ACTOR='${{ github.actor }}' SHORT_SHA='${SHORT_SHA}' bash -s" <<'EOF'
-              
-              set -e
+          set -e
+          SHORT_SHA=$(echo "${GITHUB_SHA}" | cut -c1-7)
 
-              echo "[0] Ensure compose"
-              if ! docker compose version >/dev/null 2>&1; then
-                if ! docker-compose version >/dev/null 2>&1; then
-                  # v2 플러그인 설치 시도
-                  sudo mkdir -p /usr/lib/docker/cli-plugins
-                  sudo curl -sSL https://github.com/docker/compose/releases/download/v2.27.0/docker-compose-linux-x86_64 \
-                    -o /usr/lib/docker/cli-plugins/docker-compose
-                  sudo chmod +x /usr/lib/docker/cli-plugins/docker-compose
-                fi
+          ssh -o StrictHostKeyChecking=no "${EC2_USER}@${EC2_HOST}" "GITHUB_TOKEN='${GITHUB_TOKEN}' GITHUB_ACTOR='${GITHUB_ACTOR}' SHORT_SHA='${SHORT_SHA}' bash -s" <<'EOF'
+            set -euo pipefail
+
+            echo "[0] Ensure compose (v2 preferred, fallback to docker-compose)"
+            if ! docker compose version >/dev/null 2>&1; then
+              if ! docker-compose version >/dev/null 2>&1; then
+                sudo mkdir -p /usr/lib/docker/cli-plugins
+                sudo curl -sSL https://github.com/docker/compose/releases/download/v2.27.0/docker-compose-linux-x86_64 \
+                  -o /usr/lib/docker/cli-plugins/docker-compose
+                sudo chmod +x /usr/lib/docker/cli-plugins/docker-compose
               fi
+            fi
 
-              # compose 커맨드 선택
-              if docker compose version >/dev/null 2>&1; then
-                COMPOSE="docker compose"
-              elif docker-compose version >/dev/null 2>&1; then
-                COMPOSE="docker-compose"
-              else
-                echo "❌ docker compose / docker-compose 둘 다 없습니다." >&2
-                exit 1
-              fi
-              echo "[0.1] Using: $COMPOSE"
+            if docker compose version >/dev/null 2>&1; then
+              COMPOSE="docker compose"
+            elif docker-compose version >/dev/null 2>&1; then
+              COMPOSE="docker-compose"
+            else
+              echo "❌ docker compose / docker-compose not available" >&2
+              exit 1
+            fi
+            echo "[0.1] Using: $COMPOSE"
 
-              echo "[1] Ensure project layout"
-              mkdir -p ~/sigbang-server
-              cd ~/sigbang-server
+            echo "[1] Ensure project layout"
+            mkdir -p ~/sigbang-server
+            cd ~/sigbang-server
 
-              echo "[2] Clone/Update backend repo"
-              if [ ! -d "sigbang_api/.git" ]; then
-                git clone git@github.com:sigbang/sigbang_api.git sigbang_api || \
-                git clone https://github.com/sigbang/sigbang_api.git sigbang_api
-              fi
-              cd sigbang_api
-              git fetch --all --prune || true
-              git checkout main || true
-              git pull origin main || true
+            echo "[2] Clone/Update backend repo (sigbang_api)"
+            if [ ! -d "sigbang_api/.git" ]; then
+              # Try SSH first (deploy key), fallback to HTTPS
+              git clone git@github.com:sigbang/sigbang_api.git sigbang_api || \
+              git clone https://github.com/sigbang/sigbang_api.git sigbang_api
+            fi
+            cd sigbang_api
+            git fetch --all --prune || true
+            git checkout main || true
+            git pull origin main || true
 
-              echo "[3] Set IMAGE_TAG from pipeline"
-              export IMAGE_TAG=${SHORT_SHA:-latest}
+            echo "[3] Set IMAGE_TAG"
+            export IMAGE_TAG="${SHORT_SHA}"
 
-              echo "[4] Login GHCR"
-              echo "${GITHUB_TOKEN}" | docker login ghcr.io -u "${GITHUB_ACTOR}" --password-stdin
+            echo "[4] Login GHCR"
+            echo "${GITHUB_TOKEN}" | docker login ghcr.io -u "${GITHUB_ACTOR}" --password-stdin
 
-              echo "[5] Compose up from repo root"
-              cd ~/sigbang-server
-              $COMPOSE -f docker-compose.yml -f docker-compose.back.yml pull backend
-              $COMPOSE -f docker-compose.yml -f docker-compose.back.yml up -d backend
+            echo "[5] Compose from repo root"
+            cd ~/sigbang-server
 
-              echo "[6] Prune dangling images"
-              docker image prune -f || true
-            EOF
+            # Expect: docker-compose.yml & docker-compose.back.yml exist here
+            # Compose file must reference: image: ghcr.io/sigbang/sigbang_api-backend:${IMAGE_TAG:-latest}
+            $COMPOSE -f docker-compose.yml -f docker-compose.back.yml pull backend
+            $COMPOSE -f docker-compose.yml -f docker-compose.back.yml up -d backend
+
+            echo "[6] Prune dangling images"
+            docker image prune -f || true
+
+            echo "✅ Deploy done. Running containers:"
+            $COMPOSE ps
+          EOF
