--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -10,7 +10,7 @@ concurrency:
 
 env:
   REGISTRY: ghcr.io
-  IMAGE_NAME: ${{ github.repository }}-backend     # ghcr.io/<owner>/<repo>-backend
+  IMAGE_NAME: ${{ github.repository }}-backend   # ghcr.io/<owner>/<repo>-backend
   DOCKER_BUILDKIT: 1
   COMPOSE_DOCKER_CLI_BUILD: 1
 
@@ -21,7 +21,7 @@ jobs:
 
     permissions:
       contents: read
-      packages: write      # push to GHCR
+      packages: write
       id-token: write
 
     steps:
@@ -42,7 +42,6 @@ jobs:
           images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
           tags: |
             type=raw,value=latest
-            # produce ghcr.io/...:sha-<short>
             type=sha,format=short,prefix=sha-
           labels: |
             org.opencontainers.image.source=${{ github.server_url }}/${{ github.repository }}
@@ -50,7 +49,7 @@ jobs:
       - name: 🛠️ Set up Buildx
         uses: docker/setup-buildx-action@v3
 
-      - name: 📦 Build & Push (production target)
+      - name: 📦 Build & Push (production image)
         uses: docker/build-push-action@v6
         with:
           context: .
@@ -74,11 +73,13 @@ jobs:
           EC2_HOST: ${{ secrets.DEPLOY_HOST }}
           GITHUB_ACTOR: ${{ github.actor }}
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          SHORT_SHA_TAG: sha-${{ github.sha.substr(0,7) }}
+          GITHUB_SHA: ${{ github.sha }}
         run: |
           set -e
+          SHORT_SHA_TAG="sha-$(echo "$GITHUB_SHA" | cut -c1-7)"
 
-          ssh -o StrictHostKeyChecking=no "${EC2_USER}@${EC2_HOST}" "GITHUB_TOKEN='${GITHUB_TOKEN}' GITHUB_ACTOR='${GITHUB_ACTOR}' IMAGE_TAG='${SHORT_SHA_TAG}' bash -s" <<'EOF'
+          ssh -o StrictHostKeyChecking=no "${EC2_USER}@${EC2_HOST}" \
+            "GITHUB_TOKEN='${GITHUB_TOKEN}' GITHUB_ACTOR='${GITHUB_ACTOR}' IMAGE_TAG='${SHORT_SHA_TAG}' bash -s" <<'EOF'
             set -euo pipefail
 
             echo "[0] Ensure Docker Compose v2 (remove legacy v1 if present)"
@@ -88,7 +89,6 @@ jobs:
                 -o /usr/lib/docker/cli-plugins/docker-compose
               sudo chmod +x /usr/lib/docker/cli-plugins/docker-compose
             fi
-            # Remove python docker-compose v1 if installed (avoids KeyError: ContainerConfig)
             sudo apt-get remove -y docker-compose >/dev/null 2>&1 || true
             docker compose version || true
 
@@ -98,7 +98,6 @@ jobs:
 
             echo "[2] Clone/Update backend repo (sigbang_api)"
             if [ ! -d "sigbang_api/.git" ]; then
-              # Try SSH first (deploy key), fallback to HTTPS
               git clone git@github.com:sigbang/sigbang_api.git sigbang_api || \
               git clone https://github.com/sigbang/sigbang_api.git sigbang_api
             fi
@@ -113,11 +112,11 @@ jobs:
             echo "[4] Login GHCR"
             echo "${GITHUB_TOKEN}" | docker login ghcr.io -u "${GITHUB_ACTOR}" --password-stdin
 
-            echo "[5] Compose from repo root (expects docker-compose.yml at ~/sigbang-server)"
+            echo "[5] Compose from repo root"
             cd ~/sigbang-server
-
-            # Compose files must reference:
+            # docker-compose.yml / docker-compose.back.yml must exist here.
             # image: ghcr.io/sigbang/sigbang_api-backend:${IMAGE_TAG:-latest}
+            docker compose -f docker-compose.yml -f docker-compose.back.yml down || true
             docker compose -f docker-compose.yml -f docker-compose.back.yml pull backend
             docker compose -f docker-compose.yml -f docker-compose.back.yml up -d --force-recreate backend
 
@@ -126,4 +125,4 @@ jobs:
 
             echo "✅ Deploy done. Containers:"
             docker compose -f docker-compose.yml -f docker-compose.back.yml ps
-          EOF
+EOF
