--- a/.env.dev
+++ b/.env.dev
@@ -1,4 +1,5 @@
 BASE_URL=https://api.sigbang.com
+TEMP_URL=http://192.168.1.18:3000
 ACCESS_LEEWAY_SECONDS=15
 BACKGROUND_CHECK_INTERVAL_SECONDS=30
 PROACTIVE_REFRESH_WINDOW_SECONDS=60
