--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@tanstack/react-query": "^5.90.2",
     "axios": "^1.12.2",
     "next": "15.5.4",
+    "next-auth": "4.24.11",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "zod": "^4.1.11"
