--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "next-auth": "4.24.11",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "react-easy-crop": "5.5.3",
+    "react-image-crop": "11.0.10",
     "zod": "^4.1.11"
   },
   "devDependencies": {
