--- a/package.json
+++ b/package.json
@@ -46,7 +46,8 @@
     "passport-local": "^1.0.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
-    "sharp": "^0.33.4"
+    "sharp": "^0.33.4",
+    "transliteration": "^2.3.5"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
