--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "prisma:reset": "prisma migrate reset"
   },
   "dependencies": {
+    "@aws-sdk/client-ses": "^3.927.0",
     "@nestjs/common": "^10.0.0",
     "@nestjs/config": "^3.1.1",
     "@nestjs/core": "^10.0.0",
