--- a/nginx.conf
+++ b/nginx.conf
@@ -14,6 +14,9 @@ http {
         listen 80;
         server_name localhost;
 
+        # Allow up to 10MB request bodies (for multipart uploads)
+        client_max_body_size 10m;
+
         # Security headers
         add_header X-Frame-Options DENY;
         add_header X-Content-Type-Options nosniff;
