chore: Terraform 변경 variables.tf에 manage_ssm 추가(default=true). aws_ssm_parameter.env_vars를 for_each = var.manage_ssm ? {...} : {}로 변경. 즉, 로컬에선 기본값(true)로 terraform.tfvars를 사용해 SSM 갱신. Actions에선 꺼서(=false) SSM 입력값이 전혀 필요하지 않음. GitHub Actions 배포 워크플로우 TF_VAR_manage_ssm: "false" 만 설정해 SSM 리소스 생성을 건너뜀. 나머지 변수 주입은 제거. Plan/Apply는 그대로 전체 실행하지만, SSM은 스킵되므로 값 요구 없음. LT/ASG 롤링만 반영. 로컬 운용 가이드 SSM 업데이트: terraform plan/apply -var-file=terraform.tfvars 빠르게 SSM만: terraform apply -auto-approve -var-file=terraform.tfvars -target='aws_ssm_parameter.env_vars' 배포(이미 SSM 갱신 후): GitHub Actions가 manage_ssm=false로 LT/ASG만 갱신 → 인스턴스는 부팅 시 SSM에서 최신 값을 읽어 .env 생성

--- a/.github/workflows/terraform-deploy.yml
+++ b/.github/workflows/terraform-deploy.yml
@@ -12,10 +12,12 @@ env:
   TF_IN_AUTOMATION: true
   AWS_REGION: ap-northeast-2
   TF_VAR_api_image: ${{ github.event.client_payload.image }}
+  TF_VAR_manage_ssm: "false"
 
 jobs:
   deploy:
     runs-on: ubuntu-latest
+    env: {}
     steps:
       - name: Checkout
         uses: actions/checkout@v4
