chore: push 트리거 추가
워크플로 파일 변경 시 자동으로 fmt/init(validate 모드)/validate(+옵션 plan)까지 실행

--- a/.github/workflows/terraform-validate.yml
+++ b/.github/workflows/terraform-validate.yml
@@ -3,6 +3,12 @@ name: Terraform Validate
 on:
   pull_request:
     branches: [ main ]
+  push:
+    branches: [ main ]
+    paths:
+      - '**/*.tf'
+      - 'scripts/**'
+      - '.github/workflows/terraform-validate.yml'
 
 jobs:
   validate:
