--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,132 +1,76 @@
-name: Build & Deploy to EC2
+name: Deploy API
 
 on:
   push:
     branches: [ main ]
+    paths:
+      - 'src/**'
+      - 'prisma/**'
+      - 'Dockerfile'
+      - 'package.json'
+      - 'package-lock.json'
+      - 'nest-cli.json'
+      - 'nginx.conf'
+      - '.github/workflows/deploy.yml'
+  workflow_dispatch:
 
-concurrency:
-  group: deploy-${{ github.ref }}
-  cancel-in-progress: true
+permissions:
+  contents: read
+  packages: write
 
 env:
-  REGISTRY: ghcr.io
-  IMAGE_NAME: ${{ github.repository }}-backend   # ghcr.io/<owner>/<repo>-backend
-  DOCKER_BUILDKIT: 1
-  COMPOSE_DOCKER_CLI_BUILD: 1
+  IMAGE_NAME: ghcr.io/${{ github.repository }}
 
 jobs:
-  build-and-deploy:
+  build-and-push:
     runs-on: ubuntu-latest
-    timeout-minutes: 35
-
-    permissions:
-      contents: read
-      packages: write
-      id-token: write
-
+    outputs:
+      image: ${{ steps.meta.outputs.image }}
     steps:
-      - name: Checkout
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v4
 
-      - name: Login to GHCR
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v3
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
+      - name: Log in to GHCR
         uses: docker/login-action@v3
         with:
           registry: ghcr.io
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Docker metadata (tags & labels)
+      - name: Prepare tags
         id: meta
-        uses: docker/metadata-action@v5
-        with:
-          images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
-          tags: |
-            type=raw,value=latest
-            type=sha,format=short,prefix=sha-
-          labels: |
-            org.opencontainers.image.source=${{ github.server_url }}/${{ github.repository }}
+        run: |
+          SHA=${GITHUB_SHA::7}
+          echo "image=${IMAGE_NAME}:${SHA}" >> $GITHUB_OUTPUT
+          echo "sha=${SHA}" >> $GITHUB_OUTPUT
 
-      - name: Set up Buildx
-        uses: docker/setup-buildx-action@v3
-
-      - name: Build & Push (production image)
+      - name: Build and push
         uses: docker/build-push-action@v6
         with:
           context: .
           file: ./Dockerfile
-          target: production
           push: true
-          tags: ${{ steps.meta.outputs.tags }}
-          labels: ${{ steps.meta.outputs.labels }}
-          cache-from: type=registry,ref=${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:buildcache
-          cache-to: type=registry,ref=${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:buildcache,mode=max
-          provenance: false
+          platforms: linux/amd64
+          tags: |
+            ${{ steps.meta.outputs.image }}
+            ${{ env.IMAGE_NAME }}:latest
+          cache-from: type=registry,ref=${{ env.IMAGE_NAME }}:latest
+          cache-to: type=inline
 
-      - name: Setup SSH agent
-        uses: webfactory/ssh-agent@v0.9.0
+  trigger-infra:
+    needs: build-and-push
+    runs-on: ubuntu-latest
+    steps:
+      - name: Dispatch to infra
+        uses: peter-evans/repository-dispatch@v3
         with:
-          ssh-private-key: ${{ secrets.DEPLOY_KEY }}
-
-      - name: Deploy on EC2
-        env:
-          EC2_USER: ${{ secrets.DEPLOY_USER }}
-          EC2_HOST: ${{ secrets.DEPLOY_HOST }}
-          GITHUB_ACTOR: ${{ github.actor }}
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          GITHUB_SHA: ${{ github.sha }}
-        run: |
-          set -e
-
-          SHORT_SHA_TAG="sha-$(echo "$GITHUB_SHA" | cut -c1-7)"
-
-          # 원격에서 실행할 스크립트를 로컬 변수에 담는다 (YAML 들여쓰기와 독립)
-          SCRIPT=$(cat <<'EOS'
-          set -euo pipefail
-
-          # 0) docker compose v2 확보 (v1 제거로 호환성 이슈 회피)
-          if ! docker compose version >/dev/null 2>&1; then
-            sudo mkdir -p /usr/lib/docker/cli-plugins
-            sudo curl -sSL https://github.com/docker/compose/releases/download/v2.27.0/docker-compose-linux-x86_64 \
-              -o /usr/lib/docker/cli-plugins/docker-compose
-            sudo chmod +x /usr/lib/docker/cli-plugins/docker-compose
-          fi
-          sudo apt-get remove -y docker-compose >/dev/null 2>&1 || true
-          docker compose version || true
-
-          # 1) 프로젝트 레이아웃
-          mkdir -p ~/sigbang-server
-          cd ~/sigbang-server
-
-          # 2) 백엔드 리포 준비
-          if [ ! -d "sigbang_api/.git" ]; then
-            git clone git@github.com:sigbang/sigbang_api.git sigbang_api || \
-            git clone https://github.com/sigbang/sigbang_api.git sigbang_api
-          fi
-          cd sigbang_api
-          git fetch --all --prune || true
-          git checkout main || true
-          git pull origin main || true
-
-          # 3) 이미지 태그는 GitHub Actions에서 넘겨줌 (IMAGE_TAG)
-          echo "Using IMAGE_TAG=${IMAGE_TAG}"
-
-          # 4) GHCR 로그인
-          echo "${GITHUB_TOKEN}" | docker login ghcr.io -u "${GITHUB_ACTOR}" --password-stdin
-
-          # 5) compose 실행 (루트: ~/sigbang-server)
-          cd ~/sigbang-server
-          docker compose -f docker-compose.yml -f docker-compose.back.yml down || true
-          docker compose -f docker-compose.yml -f docker-compose.back.yml pull backend
-          docker compose -f docker-compose.yml -f docker-compose.back.yml up -d --force-recreate backend
-
-          # 6) dangling 이미지 정리
-          docker image prune -f || true
-
-          # 7) 상태 출력
-          docker compose -f docker-compose.yml -f docker-compose.back.yml ps
-          EOS
-          )
-
-          # 원격에 환경변수와 함께 스크립트를 파이프로 전달하여 실행
-          ssh -o StrictHostKeyChecking=no "${EC2_USER}@${EC2_HOST}" \
-            "GITHUB_TOKEN='${GITHUB_TOKEN}' GITHUB_ACTOR='${GITHUB_ACTOR}' IMAGE_TAG='${SHORT_SHA_TAG}' bash -s" <<< "$SCRIPT"
+          token: ${{ secrets.INFRA_REPO_TOKEN }}
+          repository: sigbang/sigbang_infra
+          event-type: deploy_api
+          client-payload: |
+            { "image": "${{ needs.build-and-push.outputs.image }}" }
