--- a/sigbang_api/package.json
+++ b/sigbang_api/package.json
@@ -40,6 +40,7 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "google-auth-library": "^10.1.0",
+    "helmet": "^7.2.0",
     "multer": "^1.4.5-lts.1",
     "openai": "^4.104.0",
     "passport": "^0.7.0",
