chore: API 워크플로우를 mono레포 구조에 맞게 수정했고, 인프라 적용용 루트 워크플로우를 추가했어요.
이제 API 변경이 main에 머지되면 이미지 빌드/푸시 후 같은 레포에서 deploy_api 이벤트를 받아 Terraform Apply까지 자동으로 이어집니다.
What I changed
sigbang_api/.github/workflows/deploy.yml
경로 필터를 sigbang_api/** 기준으로 변경
이미지명: ghcr.io/${{ github.repository_owner }}/sigbang_api-backend
빌드 컨텍스트/파일: context: ./sigbang_api, file: ./sigbang_api/Dockerfile
디스패치 대상: 별도 레포 → 현재 레포(repository_dispatch with deploy_api)
.github/workflows/infra_apply.yml (신규)
repository_dispatch(deploy_api) 수신
선택 입력(workflow_dispatch)으로 수동 이미지 지정 가능
sigbang_infra에서 terraform apply -var="api_image=..." -var="manage_ssm=false"

--- a/sigbang_api/.github/workflows/deploy.yml
+++ b/sigbang_api/.github/workflows/deploy.yml
@@ -4,14 +4,14 @@ on:
   push:
     branches: [ main ]
     paths:
-      - 'src/**'
-      - 'prisma/**'
-      - 'Dockerfile'
-      - 'package.json'
-      - 'package-lock.json'
-      - 'nest-cli.json'
-      - 'nginx.conf'
-      - '.github/workflows/deploy.yml'
+      - 'sigbang_api/src/**'
+      - 'sigbang_api/prisma/**'
+      - 'sigbang_api/Dockerfile'
+      - 'sigbang_api/package.json'
+      - 'sigbang_api/package-lock.json'
+      - 'sigbang_api/nest-cli.json'
+      - 'sigbang_api/nginx.conf'
+      - 'sigbang_api/.github/workflows/deploy.yml'
   workflow_dispatch:
 
 permissions:
@@ -19,13 +19,14 @@ permissions:
   packages: write
 
 env:
-  IMAGE_NAME: ghcr.io/${{ github.repository }}
+  IMAGE_NAME: ghcr.io/${{ github.repository_owner }}/sigbang_api-backend
 
 jobs:
   build-and-push:
     runs-on: ubuntu-latest
     outputs:
       image: ${{ steps.meta.outputs.image }}
+      sha: ${{ steps.meta.outputs.sha }}
     steps:
       - uses: actions/checkout@v4
 
@@ -52,8 +53,8 @@ jobs:
       - name: Build and push
         uses: docker/build-push-action@v6
         with:
-          context: .
-          file: ./Dockerfile
+          context: ./sigbang_api
+          file: ./sigbang_api/Dockerfile
           push: true
           platforms: linux/amd64
           tags: |
@@ -66,11 +67,11 @@ jobs:
     needs: build-and-push
     runs-on: ubuntu-latest
     steps:
-      - name: Dispatch to infra
+      - name: Dispatch infra apply in monorepo
         uses: peter-evans/repository-dispatch@v3
         with:
-          token: ${{ secrets.INFRA_REPO_TOKEN }}
-          repository: sigbang/sigbang_infra
+          token: ${{ secrets.GITHUB_TOKEN }}
+          repository: ${{ github.repository }}
           event-type: deploy_api
           client-payload: |
             { "image": "${{ needs.build-and-push.outputs.image }}" }
