infra: 필수 Actions Secrets 반영
구성(`sigbang_infra`): ALB → ASG(EC2: Docker) + IAM + SSM Parameter Store + Route53 + ACM + SES(Domain Identity, DKIM, MAIL FROM, ConfigSet, DMARC)
- 배포 플로우: `.github/workflows/api-deploy.yml`
  - build-and-push: API 도커 이미지 GHCR 푸시(`ghcr.io/<owner>/sigbang_api-backend:<sha>`, `:latest` 캐시)
  - infra-apply: 동일 워크플로우에서 Terraform `init/plan/apply` 실행
    - Secrets의 `TFVARS_PROD` 내용을 `sigbang_infra/terraform.tfvars`로 기록 후 `api_image`/`manage_ssm=false` 오버라이드
    - EC2 Launch Template 변경 → ASG instance_refresh로 롤링 반영
- 필수 Actions Secrets
  - `AWS_ACCESS_KEY_ID`, `AWS_SECRET_ACCESS_KEY`
  - `TFVARS_PROD`: 로컬 `sigbang_infra/terraform.tfvars` 전체 내용(민감값 포함)
  - (정책상 필요 시) `GHCR_TOKEN`(write:packages) — 기본은 `GITHUB_TOKEN`으로 푸시
- 런타임 환경(SSM)
  - 앱 `.env` 값은 SSM Parameter Store에 저장됨(키는 `/${ssm_prefix}/...`)
  - EC2 `userdata`가 SSM에서 값을 읽어 `/home/ubuntu/.env` 생성 후 컨테이너에 주입
  - CI에서는 `manage_ssm=false`(SSM 불변), 로컬에서만 SSM 변경 필요 시 `manage_ssm=true`로 `terraform apply`
- 로컬 Apply(예)
  - `cd sigbang_infra && terraform init`
  - `terraform apply -var-file=terraform.tfvars` (SSM 변경 포함 시 `-var="manage_ssm=true"`)
- 이메일(SNS 피드백)
  - SES 리전/발신/수신은 SSM로 주입(`SES_REGION`, `SES_FROM_EMAIL`, `SES_TO_EMAIL`, `SES_CONFIGURATION_SET`)
  - 수신 첨부 한도: 안전상 약 7MB(베이스64 오버헤드 고려)
  - DMARC TXT(`_dmarc.<domain>`) 추가 완료, DKIM/MAIL FROM/SPF Terraform 관리
- 트러블슈팅 빠른 체크
  - GHCR 푸시 오류: Repo Settings → Actions → Workflow permissions “Read and write” / 필요 시 `GHCR_TOKEN`
  - Terraform 변수 오류: `TFVARS_PROD` 시크릿 설정 확인
  - SES “Region is missing”: 컨테이너 `SES_REGION` 또는 `AWS_REGION`/`AWS_DEFAULT_REGION` 주입 확인
  - 크론 23502: Prisma 마이그레이션에서 `recipe_counters.id/updatedAt` 기본값 설정 적용 여부 확인

--- a/.github/workflows/api-deploy.yml
+++ b/.github/workflows/api-deploy.yml
@@ -68,6 +68,15 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
+      - name: Write terraform.tfvars from secret
+        working-directory: sigbang_infra
+        env:
+          TFVARS_PROD: ${{ secrets.TFVARS_PROD }}
+        run: |
+          echo "$TFVARS_PROD" > terraform.tfvars
+          echo "api_image = \"${{ needs.build-and-push.outputs.image }}\"" >> terraform.tfvars
+          echo "manage_ssm = false" >> terraform.tfvars
+
       - name: Setup Terraform
         uses: hashicorp/setup-terraform@v3
         with:
