--- a/sigbang_user_front/package.json
+++ b/sigbang_user_front/package.json
@@ -6,7 +6,9 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "eslint"
+    "lint": "eslint",
+    "build:cf": "npx @cloudflare/next-on-pages@latest",
+    "dev:cf": "npx wrangler pages dev ."
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.58.0",
@@ -24,6 +26,8 @@
     "@eslint/eslintrc": "^3",
     "@next/bundle-analyzer": "^16.0.1",
     "@tailwindcss/postcss": "^4",
+    "@cloudflare/next-on-pages": "^1.14.2",
+    "wrangler": "^3.92.0",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
