--- a/sigbang_user_front/package.json
+++ b/sigbang_user_front/package.json
@@ -7,7 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "eslint",
-    "build:cf": "npx @cloudflare/next-on-pages@latest",
+    "build:cf": "npx @cloudflare/next-on-pages@1.14.1",
     "dev:cf": "npx wrangler pages dev ."
   },
   "dependencies": {
@@ -26,7 +26,7 @@
     "@eslint/eslintrc": "^3",
     "@next/bundle-analyzer": "^16.0.1",
     "@tailwindcss/postcss": "^4",
-    "@cloudflare/next-on-pages": "^1.14.2",
+    "@cloudflare/next-on-pages": "1.14.1",
     "wrangler": "^3.92.0",
     "@types/node": "^20",
     "@types/react": "^19",
