chore: OpenNext로 전환 반영 완료
sigbang_user_front/package.json 스크립트 수정
build:cf → npx @opennextjs/cloudflare@latest build
deploy:cf → npx wrangler deploy
dev:cf 제거
sigbang_user_front/wrangler.toml 업데이트
main = ".open-next/worker/index.mjs"
assets = { directory = ".open-next/assets" }
compatibility_date = "2024-11-01"

--- a/sigbang_user_front/package.json
+++ b/sigbang_user_front/package.json
@@ -7,8 +7,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "eslint",
-    "build:cf": "npx -y @cloudflare/next-on-pages@latest",
-    "dev:cf": "npx wrangler pages dev ."
+    "build:cf": "npx @opennextjs/cloudflare@latest build",
+    "deploy:cf": "npx wrangler deploy"
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.58.0",
@@ -25,6 +25,8 @@
     "@eslint/eslintrc": "^3",
     "@next/bundle-analyzer": "^16.0.1",
     "@tailwindcss/postcss": "^4",
+    "@opennextjs/cloudflare": "latest",
+    "open-next": "latest",
     "wrangler": "^3.92.0",
     "@types/node": "^20",
     "@types/react": "^19",
