--- a/sigbang_user_front/wrangler.toml
+++ b/sigbang_user_front/wrangler.toml
@@ -1,10 +1,10 @@
 name = "sigbang-user-front"
-compatibility_date = "2024-09-23"
-compatibility_flags = ["nodejs_compat"]
+main = ".open-next/worker/index.mjs"
+assets = { directory = ".open-next/assets" }
+compatibility_date = "2024-11-01"
 
-# Note:
-# - This file is read by Cloudflare Pages build (beta) to set Worker compatibility.
-# - Keep the date reasonably current to use new runtime features safely.
-# - No Pages-specific fields are required here; next-on-pages handles the build output.
+# OpenNext Cloudflare (Workers) config:
+# - `build:cf` generates `.open-next/*`
+# - `deploy:cf` publishes the Worker using this config
 
 
