--- a/sigbang_user_front/package.json
+++ b/sigbang_user_front/package.json
@@ -7,7 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "eslint",
-    "build:cf": "npx @opennextjs/cloudflare@latest build --openNextConfigPath open-next.config.mjs",
+    "build:cf": "npx @opennextjs/cloudflare@1.13.1 build --openNextConfigPath ./open-next.config.json --skipWranglerConfigCheck",
     "deploy:cf": "npx wrangler deploy"
   },
   "dependencies": {
@@ -25,7 +25,7 @@
     "@eslint/eslintrc": "^3",
     "@next/bundle-analyzer": "^16.0.1",
     "@tailwindcss/postcss": "^4",
-    "@opennextjs/cloudflare": "latest",
+    "@opennextjs/cloudflare": "1.13.1",
     "open-next": "latest",
     "wrangler": "^4.49.1",
     "@types/node": "^20",
