--- a/.github/workflows/web-ci.yml
+++ b/.github/workflows/web-ci.yml
@@ -21,7 +21,7 @@ jobs:
           cache-dependency-path: |
             sigbang_user_front/package-lock.json
             package-lock.json
-      - run: npm ci
+      - run: npm install --no-audit --no-fund
       - run: npm run lint
 
 
