fix:wrangler.toml의 main을 해당 경로로 바꿨습니다. OpenNext Cloudflare는 최신 버전에서 워커 엔트리 경로가 .open-next/server-functions/default/index.mjs로 나옵니다. 그래서 wrangler.toml의 main을 해당 경로로 바꿨습니다.

--- a/sigbang_user_front/wrangler.toml
+++ b/sigbang_user_front/wrangler.toml
@@ -1,5 +1,6 @@
 name = "sigbang-user-front"
-main = ".open-next/worker/index.mjs"
+# OpenNext Cloudflare output paths
+main = ".open-next/server-functions/default/index.mjs"
 assets = { directory = ".open-next/assets" }
 compatibility_date = "2024-11-01"
 
