--- a/.github/workflows/deploy-user-front.yml
+++ b/.github/workflows/deploy-user-front.yml
@@ -1,4 +1,4 @@
-name: Deploy user front to Cloudflare Workers (OpenNext)
+name: Deploy user front to Cloudflare Pages (next-on-pages)
 
 on:
   push:
@@ -23,18 +23,24 @@ jobs:
         with:
           node-version: "22"
           cache: "npm"
-          cache-dependency-path: sigbang_user_front/package.json
+          cache-dependency-path: sigbang_user_front/package-lock.json
 
       - name: Install
         run: npm install --no-audit --no-fund
 
-      - name: Build (OpenNext Cloudflare)
-        run: npm run build:cf
+      - name: Build (Cloudflare Pages - next-on-pages)
+        run: npm run build:pages
 
-      - name: Deploy (Wrangler)
+      - name: Deploy to Cloudflare Pages
         env:
           CLOUDFLARE_API_TOKEN: ${{ secrets.CLOUDFLARE_API_TOKEN }}
           CLOUDFLARE_ACCOUNT_ID: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
-        run: npx wrangler deploy
+          CF_PAGES_PROJECT: ${{ secrets.CF_PAGES_PROJECT }}
+        run: |
+          npx wrangler pages deploy \
+            .vercel/output/static \
+            --project-name="${{ secrets.CF_PAGES_PROJECT }}" \
+            --branch="${{ github.ref_name }}" \
+            --functions ".vercel/output/functions"
 
 
