--- a/.github/workflows/web-ci.yml
+++ b/.github/workflows/web-ci.yml
@@ -16,12 +16,14 @@ jobs:
       - uses: actions/checkout@v4
       - uses: actions/setup-node@v4
         with:
-          node-version: 20
+          node-version: "22"
           cache: npm
           cache-dependency-path: |
             sigbang_user_front/package-lock.json
             package-lock.json
       - run: npm install --no-audit --no-fund
       - run: npm run lint
+      - name: Build (Cloudflare Pages - next-on-pages)
+        run: npm run build:pages
 
 
