chore: 최신 wrangler(v4)에서는 --functions 옵션이 제거되었습니다. 배포 커맨드를 수정했습니다

--- a/.github/workflows/deploy-user-front.yml
+++ b/.github/workflows/deploy-user-front.yml
@@ -53,7 +53,6 @@ jobs:
           npx wrangler pages deploy \
             .vercel/output/static \
             --project-name="${{ secrets.CF_PAGES_PROJECT }}" \
-            --branch="${{ github.ref_name }}" \
-            --functions ".vercel/output/functions"
+            --branch="${{ github.ref_name }}"
 
 
