fix: 정적 자산과 Pages Functions가 함께 업로드되어 nodejs_compat 에러 없이 next-on-pages 런타임으로 서비스

--- a/.github/workflows/deploy-user-front.yml
+++ b/.github/workflows/deploy-user-front.yml
@@ -50,8 +50,9 @@ jobs:
           CLOUDFLARE_ACCOUNT_ID: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
           CF_PAGES_PROJECT: ${{ secrets.CF_PAGES_PROJECT }}
         run: |
+          cd .vercel/output
           npx wrangler pages deploy \
-            .vercel/output/static \
+            static \
             --project-name="${{ secrets.CF_PAGES_PROJECT }}" \
             --branch="${{ github.ref_name }}"
 
